# Assist_CLI

./: .gitignore  Assist_CLI_v2.docx  Assist_CLI_v3.docx  CLAUDE.md  README.md  TECH_DEBT.md  pyproject.toml  review.md  test.py  test_real_llm.py
assist/agents/: base.py  diff_reviewer.py  explainer.py  generator.py  refactor.py  repo_agent.py  reviewer.py  test_generator.py
assist/cli/: commands.py  main.py
assist/core/: architectural_risk_analyzer.py  architecture_analyzer.py  assembler.py  code_quality_analyzer.py  complexity_analyzer.py  config.py  context_guard.py  cross_file_analyzer.py  dead_code_detector.py  dependency_analyzer.py  dependency_graph.py  git_diff_extractor.py  god_class_detector.py  internal_dependency_resolver.py  long_method_detector.py  orchestrator.py  output_formatter.py  project_context.py  project_graph.py  project_scanner.py  prompt_builder.py  prompt_context_builder.py  registry.py  repository_context.py  repository_health.py  semantic_analyzer.py  skill_resolver.py  verifier.py
assist/llm/: anthropic_client.py  base.py  factory.py  mock_client.py
assist/schemas/: models.py
assist/skills/code_review/: SKILL.md
assist/skills/diff_review/: SKILL.md
assist/utils/: file_discovery.py  file_metadata.py  file_reader.py
assist_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: registry.yaml  settings.yaml
docs/: ROADMAP_v0.3.0.md  SKILL_FORMAT.md
tests/integration/: conftest.py  test_diff_flow.py  test_generate_flow.py  test_refactor_flow.py  test_repo_flow.py  test_review_flow.py  test_test_flow.py
(+47 files in other folders)
